[package]
name              = "hyper-multipart-rfc7578"
description       = "An implementation of multipart/form-data (RFC7578) for Hyper"
authors           = ["Ferris Tseng <ferristseng@fastmail.fm>"]
documentation     = "https://docs.rs/hyper-multipart-rfc7578"
repository        = "https://github.com/ferristseng/rust-hyper-multipart-rfc7578"
keywords          = ["hyper", "multipart", "form", "http"]
categories        = ["Asynchronous", "Web programming]
version           = "0.1.0-alpha"
readme            = "README.md"
license           = "MIT OR Apache-2.0"

[badges]
travis-ci         = { repository = "ferristseng/rust-hyper-multipart-rfc7578" }

[dependencies]
bytes             = "0.4"
futures           = "0.1"
hyper             = "0.11"
rand              = "0.3"
tokio-core        = "0.1"

[dev-dependencies]
hyper-tls         = "0.1"
