[package]
name                      = "actix-multipart-rfc7578"
description               = "An implementation of multipart/form-data (RFC7578) for Actix"
authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>"]
documentation             = "https://docs.rs/actix-multipart-rfc7578"
repository                = "https://github.com/ferristseng/rust-multipart-rfc7578"
keywords                  = ["actix", "multipart", "form", "http"]
categories                = ["asynchronous", "web-programming"]
version                   = "0.4.0"
readme                    = "../README.md"
license                   = "MIT OR Apache-2.0"
edition                   = "2018"

[badges]
travis-ci                 = { repository = "ferristseng/rust-multipart-rfc7578" }
maintenance               = { status = "passively-maintained" }

[dependencies]
actix-http                = "2.2"
bytes-5                   = { package = "bytes", version = "0.5" }
common-multipart-rfc7578  = { path = "../common", version = "0.3" }
futures                   = "0.3"
thiserror                 = "1.0"

[dev-dependencies]
awc                       = "2.0"
actix-rt                  = "1.0"
