[package]
name                      = "actix-multipart-rfc7578"
description               = "An implementation of multipart/form-data (RFC7578) for Actix"
authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>"]
documentation             = "https://docs.rs/actix-multipart-rfc7578"
repository                = "https://github.com/ferristseng/rust-multipart-rfc7578"
keywords                  = ["actix", "multipart", "form", "http"]
categories                = ["asynchronous", "web-programming"]
version                   = "0.8.0"
readme                    = "../README.md"
license                   = "MIT OR Apache-2.0"
edition                   = "2021"

[badges]
github                    = { repository = "ferristseng/rust-multipart-rfc7578", workflow = "Rust" }
maintenance               = { status = "passively-maintained" }

[dependencies]
actix-http                = { version = "3", default-features = false }
bytes                     = "1.1"
common-multipart-rfc7578  = { path = "../common", version = "0.3" }
futures-core              = "0.3"
thiserror                 = "1.0"

[dev-dependencies]
awc                       = "=3.0.0-beta.21"
actix-rt                  = "2.5.0"
