[package]
name                      = "common-multipart-rfc7578"
description               = "An implementation of multipart/form-data (RFC7578)"
authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>"]
documentation             = "https://docs.rs/common-multipart-rfc7578"
repository                = "https://github.com/ferristseng/rust-multipart-rfc7578"
keywords                  = ["multipart", "form", "http"]
categories                = ["asynchronous", "web-programming"]
version                   = "0.3.0"
readme                    = "../README.md"
license                   = "MIT OR Apache-2.0"
edition                   = "2018"

[badges]
travis-ci                 = { repository = "ferristseng/rust-multipart-rfc7578" }
maintenance               = { status = "passively-maintained" }

[dependencies]
bytes                     = "1.0"
futures                   = "0.3"
http                      = "0.2"
mime                      = "0.3"
mime_guess                = "2.0"
rand                      = { version = "0.8", features = ["small_rng"] }
thiserror                 = "1.0"

[dev-dependencies]
actix-multipart-rfc7578   = { path = "../actix" }
hyper                     = "0.14"
hyper-multipart-rfc7578   = { path = "../hyper" }
tokio                     = { version = "1.2", features = ["macros"] }
