[package]
name                      = "hyper-multipart-rfc7578"
description               = "An implementation of multipart/form-data (RFC7578) for Hyper"
authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>"]
documentation             = "https://docs.rs/hyper-multipart-rfc7578"
repository                = "https://github.com/ferristseng/rust-multipart-rfc7578"
keywords                  = ["hyper", "multipart", "form", "http"]
categories                = ["asynchronous", "web-programming"]
version                   = "0.5.0"
readme                    = "../README.md"
license                   = "MIT OR Apache-2.0"
edition                   = "2018"

[badges]
travis-ci                 = { repository = "ferristseng/rust-multipart-rfc7578" }
maintenance               = { status = "passively-maintained" }

[dependencies]
bytes                     = "1.0"
common-multipart-rfc7578  = { path = "../common", version = "0.3.0" }
futures                   = "0.3"
http                      = "0.2"
hyper                     = { version = "0.14", features = ["stream"] }

[dev-dependencies]
hyper                     = { version = "0.14", features = ["client", "http1", "http2", "server", "stream"] }
hyper-tls                 = "0.5"
tokio                     = { version = "1.2", features = ["rt-multi-thread", "macros"] }
