[package]
name                      = "hyper-multipart-rfc7578"
description               = "An implementation of multipart/form-data (RFC7578) for Hyper"
authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>"]
documentation             = "https://docs.rs/hyper-multipart-rfc7578"
repository                = "https://github.com/ferristseng/rust-multipart-rfc7578"
keywords                  = ["hyper", "multipart", "form", "http"]
categories                = ["asynchronous", "web-programming"]
version                   = "0.8.0"
readme                    = "../README.md"
license                   = "MIT OR Apache-2.0"
edition                   = "2021"

[badges]
github                    = { repository = "ferristseng/rust-multipart-rfc7578", workflow = "Rust" }
maintenance               = { status = "passively-maintained" }

[dependencies]
bytes                     = "1.1"
common-multipart-rfc7578  = { path = "../common", version = "0.6" }
futures-core              = "0.3"
http                      = "1.1"
hyper                     = "1.4"

[dev-dependencies]
futures-util              = { version = "0.3", default-features = false, features = ["std"] }
http-body-util            = "0.1.2"
hyper                     = { version = "1.4", features = ["client", "http1", "http2", "server"] }
hyper-tls                 = "0.6"
hyper-util                = { version = "0.1.8", features = ["client", "client-legacy", "http1", "tokio"] }
tokio                     = { version = "1", features = ["macros", "rt-multi-thread"] }
